# example-bazel-cargo-wasm-with-tokio

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE
src/client/: BUILD  Cargo.toml
src/server/: BUILD  Cargo.toml
